<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/container"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Profile.ProfilePage" >

    <ImageView
        android:id="@+id/profilePic"
        android:layout_width="107dp"
        android:layout_height="107dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="268dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userNameDisplay"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:text="Name"
        android:textColor="#4E342E"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toTopOf="@+id/profilePic" />

    <TextView
        android:id="@+id/displayPhoneNo"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_phone_24"
        android:drawablePadding="10dp"
        android:text="Phone Number"
        android:textColor="#4E342E"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/userNameDisplay" />

    <TextView
        android:id="@+id/displayEmail"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#32ffffff"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:text="Email"
        android:textColor="#4E342E"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePic"
        app:layout_constraintTop_toBottomOf="@+id/displayPhoneNo" />

    <TextView
        android:id="@+id/displayHeight"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="141dp"
        android:background="#32ffffff"
        android:text="Height"
        android:textColor="#4E342E"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayEmail" />

    <TextView
        android:id="@+id/displayWeight"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="141dp"
        android:background="#32ffffff"
        android:text="Weight"
        android:textColor="#4E342E"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayHeight" />

    <ImageView
        android:id="@+id/editProfile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_baseline_settings_24"
        app:layout_constraintEnd_toStartOf="@+id/displayEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePic" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="372dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/material_dynamic_neutral100"
        android:text="@string/signOutText"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayWeight" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="31dp"
        android:background="@drawable/small_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <View
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="334dp"
        android:background="@drawable/small_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/faqButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="298dp"
        android:text="@string/faqView"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayAboutMe"
        android:textColor="#4E342E"/>

    <TextView
        android:id="@+id/displayAboutMe"
        android:layout_width="260dp"
        android:layout_height="175dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="16dp"
        android:background="#32ffffff"
        android:hint="@string/aboutMeHint"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.865"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayWeight"
        android:textColorHint="#4E342E"/>

    <TextView
        android:id="@+id/aboutMeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/aboutMeTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/displayAboutMe"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfile"
        android:textColor="#4E342E"/>
</androidx.constraintlayout.widget.ConstraintLayout>